# atlas

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  Makefile  README.md  SUMMARY.md  docker-compose.prod.yml  docker-compose.yml  fly.toml  pyproject.toml
data/corpus/: README.md
data/eval/: fastapi_questions.json
docs/: api.md  evaluation.md  ingestion.md  orchestration.md  retrieval.md
eval_data/: fastapi_dataset.json  sample_dataset.json
monitoring/: prometheus.yml
monitoring/grafana/dashboards/: atlas_overview.json
scripts/: check_health.py  create_key.py  fetch_corpus.py  ingest.py  run_eval.py  seed_demo.py  setup_dev.sh
src/atlas/: __init__.py  config.py  logging.py
src/atlas/api/: __init__.py  app.py  asgi.py  auth.py  cache.py  cost.py  dependencies.py  namespaces.py  schemas.py
src/atlas/evaluation/: __init__.py  comparator.py  reporter.py  runner.py
src/atlas/ingestion/: __init__.py  dense.py  embedder.py  hashing.py  indexer.py  sparse.py
src/atlas/interfaces/: __init__.py  chunker.py  document.py  embedder.py  evaluator.py  index.py  llm.py  loader.py  reranker.py  retriever.py
src/atlas/orchestration/: __init__.py  decomposer.py  faithfulness.py  generator.py  grader.py  llm.py  pipeline.py  router.py
src/atlas/retrieval/: __init__.py  dense.py  fusion.py  hybrid.py  reranker.py  sparse.py
tests/: conftest.py
tests/integration/: test_pipeline_integration.py
tests/unit/: test_interfaces.py
tests/unit/api/: test_cache.py  test_cost.py  test_routes.py
tests/unit/evaluation/: test_dataset.py  test_metrics.py  test_reporter_comparator.py  test_runner.py
tests/unit/ingestion/: test_chunkers.py  test_hashing.py  test_indexer.py  test_loaders.py  test_sparse_index.py
tests/unit/orchestration/: test_decomposer.py  test_faithfulness.py  test_generator.py  test_grader.py  test_llm.py  (+2 more)
(+34 files in other folders)
