[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "atlas"
version = "0.1.0"
description = "Production-grade agentic RAG platform for enterprise knowledge bases"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",

    # Config & validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.1",

    # Async
    "anyio>=4.4.0",

    # Document loaders
    "pypdf>=4.3.0",
    "beautifulsoup4>=4.12.3",
    "markdown-it-py>=3.0.0",

    # Embeddings & vector store
    "openai>=1.35.0",
    "qdrant-client>=1.9.1",

    # Sparse retrieval
    "rank-bm25>=0.2.2",

    # Reranking
    "sentence-transformers>=3.0.1",
    "torch>=2.3.0",

    # Caching
    "redis>=5.0.6",

    # Observability
    "structlog>=24.2.0",
    "prometheus-client>=0.20.0",

    # Utilities
    "tenacity>=8.3.0",
    "tiktoken>=0.7.0",
    "numpy>=1.26.4",
    "xxhash>=3.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.9",
    "mypy>=1.10.0",
    "types-redis>=4.6.0",
    "rich>=13.7.1",
    "tabulate>=0.9.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/atlas"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=atlas --cov-report=term-missing -q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.coverage.run]
source = ["src/atlas"]
omit = ["*/tests/*"]
